assets/css/style.css
/*@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,700&display=swap');*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #c9cebd;
    font-family: roboto, sans-serif;
}

.page-container {
    display: grid;
    grid-template-columns: repeat (12, 1fr);
    grid-template-rows: 10% repeat (10, 1rf) 10%;
    row-gap: 1rem;
    column-gap: 1rem;
    padding: 2rem;
}

/*header*/
.header-section {
    grid-column: 1 / 13;
    grid-row: 1 / 2;
    background-color: #6C6061;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-left: 15px;
    padding-top: 8px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.logo-image {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 1px solid #c9cebd;
}

@media screen and (min-width: 375px) {
    .logo-image {
        width: 40px;
        height: 40px;
    }
}

@media screen and (min-width: 810px) {
    .logo-image {
        width: 55px;
        height: 55px;
        margin-left: 40px;
    }
}

.menu {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    padding: 10px 20px;
    list-style: none;
    margin-right: 7px;
}

ul li {
    margin: 5px 0;
    font-size: 14px;
    font-weight: 500;
}

ul li a {
    text-decoration: none;
    color: #B2BCAA;
}

ul li a:hover {
    color: #c9cebd;
    transition: 0.5s;
    text-decoration: underline;
    cursor: pointer;
}

/*media queries for 376px size and bigger*/

@media screen and (min-width: 376px) {
    .menu {
        flex-direction: row;
    }

    ul li {
        margin: 10px 5px;
        font-size: 16px;
    }
}

@media screen and (min-width: 500px) {

    ul li {
        margin: 10px 5px;
        font-size: 16px;
    }
}

@media screen and (min-width: 810px) {

    ul li {
        margin: 10px 5px;
        font-size: 18px;
    }
}

/*styling for main section of the page*/

main {
    grid-column: 1 / 13;
    grid-row: 2 / 12;
}

/*styling for landing/title section of the page*/
.title-section {
    grid-column: 1 / 13;
    grid-row: 1 / 2;
    min-height: 250px;
    border-radius: 10px;
    background-image: url("../images/oelweildefrucht-klein.webp");
    opacity: 0.8;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    text-align: center;
    border: none;
    padding-top: 60px;
    padding-right: 15px;
    padding-left: 15px;
    margin-bottom: 1rem;
}


@media screen and (max-width: 1023px) {
    .title-section {
        background-attachment: scroll;
    }
}

h1 {
    font-size: 30px;
    text-transform: uppercase;
    color: black;
    font-family: Urbanist, sans-serif;
    font-weight: 700;
    margin-bottom: 8px;
    background-color: #C9CEBD;
    opacity: 0.8;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    padding: 6px;
}

h2 {
    font-size: 24px;
    font-style: italic;
    color: black;
    font-family: Urbanist, sans-serif;
    font-weight: 600;
    background-color: #C9CEBD;
    opacity: 0.8;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    padding: 6px;
}

@media screen and (min-width: 810px) {
    h1 {
        font-size: 36px;
    }

    h2 {
        font-size: 30px;
    }
}

@media screen and (min-width: 1024px) {
    h1 {
        font-size: 42px;
    }

    h2 {
        font-size: 36px;
    }
}

/*styling paragraph-sections in the main section*/

.text-explanation {
    background-color: #B2BCAA;
    border-radius: 10px;
    padding: 10px 15px;
    margin-bottom: 1rem;
}

.home-text-explanation {
    margin-bottom: 1rem;
}

.paragraph-title {
    text-align: center;
    margin-top: 15px;
    margin-bottom: 20px;
}

p {
    margin-bottom: 15px;
    text-align: left;
    letter-spacing: 2px;
    font-size: 14px;
    text-indent: 10px;
    line-height: 1.5;
}

/*styling map section in index.html*/
.map-section {
    grid-column: 1 / 13;
    grid-row: 6 / 9;
    background-color: #C9CEBD;
    border: 3px solid #64403E;
    border-radius: 10px;
    position: relative;
    margin-bottom: 1rem;
}

button {
    background-color: #64403E;
    border: none;
    color: #C9CEBD;
    padding: 10px 22px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: Urbanist, sans-serif;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: 3px;
    margin-left: 150px;
    margin-bottom: 10px;
    margin-top: 8px;
    border-radius: 12px;
    position: absolute;
    right: 120px;
    bottom: 22px;
}

button:hover {
    border: 1px solid #64403E;
    background-color: #C9CEBD;
    color: #64403E;
    cursor: pointer;
    transition: 0.5s;
}

/*styling footer*/

footer {
    grid-column: 1 / 13;
    grid-row: 12 / 13;
    background-color: #6C6061;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.social-networks {
    text-align: center;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #c9cebd;
}


/*style for the Contribute Page*/

.form-section-div {
    grid-column: 1 / 13;
    grid-row: 4 / 9;
    position: relative;
    margin-bottom: 1rem;
}

fieldset {
    padding-left: 8px;
    padding-right: 8px;
}

legend {
    font-size: 48px;
    font-family: Urbanist, sans-serif;
    margin-left: 30px;
    color: #6C6061;
}

.label-text {
    display: block;
    font-size: 18px;
    color: #6C6061;
    font-weight: 600;
    margin: 10px 0;
}

input {
    width: 100%;
    height: 40px;
    border: 2px solid #6C6061;
    border-radius: 3px;
    padding-left: 10px;
}

textarea {
    width: 100%;
    border: 2px solid #6C6061;
    border-radius: 3px;
}

.submit-button {
    display: block;
    max-width: 250px;
    margin: 25px 0;
    background-color: #64403E;
    border: none;
    border-radius: 12px;
    color: #C9CEBD;
    padding: 5px 22px;
    text-align: center;
    font-family: Urbanist, sans-serif;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: 3px;
}

form a {
    text-decoration: none;
}

.submit-button:hover {
    border: 1px solid #64403E;
    background-color: #C9CEBD;
    color: #64403E;
    cursor: pointer;
    transition: 0.5s;
}

@media screen and (min-width: 450px) {
    input {
        width: 80%;
    }

    textarea {
        width: 80%;
    }
}


.form-section-div-absolute {
    position: absolute;
    top: 1140px;
    right: -1000px;
    display: none;
}


.form-section-photo {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    opacity: 0.5;
}

@media screen and (min-width: 700px) {

    input {
        width: 50%;
    }

    textarea {
        width: 50%;
    }

    .form-section-div-absolute {
        display: block;
        top: 550px;
        right: 50px;
    }

    .form-section-photo {
        width: 270px;
        height: 270px;
    }
}

@media screen and (min-width: 768px) {
    input {
        width: 50%;
    }

    textarea {
        width: 50%;
    }

    .form-section-div-absolute {
        top: 550px;
        right: 50px;
    }

    .form-section-photo {
        width: 300px;
        height: 300px;
    }
}

@media screen and (min-width: 1024px) {
    .form-section-div-absolute {
        top: 520px;
        right: 80px;
    }

    .form-section-photo {
        width: 380px;
        height: 380px;
    }
}

.photo-section-div {
    grid-column: 1 / 13;
    grid-row: 9 / 12;
}

.contribute-page-photo {
    background-image: url("../images/hosenbiene-small.webp");
    height: 400px;
    width: 100%;
}

/*About-Us_Page*/

.grid-container--fill {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-template-rows: repeat(4, 500px);
    margin-top: 1rem;
    column-gap: 1rem;
    row-gap: 1rem;
}

.about-us-photo,
.contribute-page-photo {
    border: 3px solid #64403E;
    border-radius: 10px;
    height: 500px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    border: 3px solid #64403E;
    border-radius: 10px;
}


.about-us-photo-1 {
    background-image: url("../images/sunshine.webp");
}

.about-us-photo-2 {
    background-image: url("../images/boden_regenwurm-1024x1024.webp");

}

.about-us-photo-3 {
    background-image: url("../images/kapuzinerkresse1-scaled-e1658159688319-1024x683.webp");
}

.about-us-photo-4 {
    background-image: url("../images/pkpicknick_1509431939505186_2074816723440290873_n-1024x1024.webp");
}


.child-div {
    max-width: 365px;
    min-height: auto;
}

.ethical-principles li {
    margin-top: 40px;
    margin-left: 20px;
    list-style: none;
}

.permaculture-link {
    color: #6c6061;
    text-decoration: none;
}

.permaculture-link:visited {
    color: #e3922a;
    text-shadow: 2px 2px 4px #6c6061;
}

.permaculture-link:hover {
    color: #c9cebd;
    text-decoration: underline;
    font-size: 20px;
}

.list-logo {
    width: 70px;
    height: 70px;
}

.list-text-span {
    font-family: roboto, sans-serif;
    font-weight: 600;
    margin-left: 25px;
}

.conntact-list {
    margin-top: 40px;
}

.conntact-list li {
    font-family: roboto, sans-serif;
    color: black;
    font-size: 14px;
    list-style-type: none;
    padding-left: 10px;
    margin: 10px 0;
}

.conntact-list-span {
    font-weight: bold;
}

#bank-account-details {
    text-indent: 0;
}

@media screen and (min-width: 845px) {
    .grid-container--fill {
        grid-template-rows: repeat(3, 500px);
    }

}

